# rytest

./: .envrc  Cargo.toml  pyproject.toml  shell.nix
.github/workflows/: CI.yml
src/: collection.rs  lib.rs
