[package]
name = "rytest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
pyo3 = { version = "0.22.0", features = ["auto-initialize"] }
tokio = { version = "1.41.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.13.0"
