[package]
name = "rytest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rytest"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
ignore = "0.4.23"
pyo3 = { version = "0.22.0", features = ["auto-initialize"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
tree-sitter = "0.24.3"
tree-sitter-python = "0.23.2"

[dev-dependencies]
tempfile = "3.13.0"
